--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,4 @@
+---
 #------------------------------------------------------------
 # Values for this lesson.
 #------------------------------------------------------------
@@ -8,32 +9,32 @@
 # lc: Library Carpentry
 # cp: Carpentries (to use for instructor training for instance)
 # incubator: The Carpentries Incubator
-carpentry: 'dc'
+carpentry: "dc"
 
 # Overall title for pages.
-title: 'Data Wrangling and Processing for Genomics (modified for NeSI)'
+title: "Data Wrangling and Processing for Genomics (modified for NeSI)"
 
 # Date the lesson was created (YYYY-MM-DD, this is empty by default)
-created: '2015-03-24'
+created: "2015-03-24"
 
 # Comma-separated list of keywords for the lesson
-keywords: 'software, data, lesson, The Carpentries'
+keywords: "software, data, lesson, The Carpentries"
 
 # Life cycle stage of the lesson
 # possible values: pre-alpha, alpha, beta, stable
-life_cycle: 'stable'
+life_cycle: "stable"
 
 # License of the lesson materials (recommended CC-BY 4.0)
-license: 'CC-BY 4.0'
+license: "CC-BY 4.0"
 
 # Link to the source repository for this lesson
-source: 'https://github.com/datacarpentry/wrangling-genomics'
+source: "https://github.com/otagobioinformaticsspringschool/wrangling-genomics-nesi"
 
 # Default branch of your lesson
-branch: 'main'
+branch: "main"
 
 # Who to contact if there are any issues
-contact: 'team@carpentries.org'
+contact: "team@carpentries.org"
 
 # Navigation ------------------------------------------------
 #
@@ -58,28 +59,27 @@ contact: 'team@carpentries.org'
 # - another-learner.md
 
 # Order of episodes in your lesson
-episodes: 
-- 01-background.md
-- 02-quality-control.md
-- 03-trimming.md
-- 04-variant_calling.md
-- 05-automation.md
+episodes:
+  - 01-background.md
+  - 02-quality-control.md
+  - 03-trimming.md
+  - 04-variant_calling.md
+  - 05-automation.md
 
 # Information for Learners
-learners: 
+learners:
 
 # Information for Instructors
-instructors: 
+instructors:
 
 # Learner Profiles
-profiles: 
+profiles:
 
 # Customisation ---------------------------------------------
 #
 # This space below is where custom yaml items (e.g. pinning
 # sandpaper and varnish versions) should live
 
-
-url: 'https://otagobioinformaticsspringschool.github.io/wrangling-genomics-nesi'
+url: "https://otagobioinformaticsspringschool.github.io/wrangling-genomics-nesi"
 analytics: carpentries
 lang: en
